# EWR

./: .gitignore  CMakeLists.txt  main  main.cpp  main2.cpp
Vorherige Blätter/: CMakeLists.txt
Vorherige Blätter/dense/: DenseMatrix.cpp  DenseVector.cpp  DenseVector.hpp
Vorherige Blätter/sparse/: CSCMatrix.cpp  CSCMatrix.hpp  Wissenschaftliches Rechnen.code-workspace
blatt8/: CMakeLists.txt  main  main.cpp
blatt8/dense/: DenseVector.cpp  DenseVector.hpp
blatt8/distributed/: DCSCMatrix.cpp  DCSCMatrix.hpp  DVector.cpp  DVector.hpp
blatt8/sparse/: CSCMatrix.cpp  CSCMatrix.hpp
dense/: DenseMatrix.cpp  DenseMatrix.hpp  DenseVector.cpp  DenseVector.hpp
solvers/: solvers.cpp  solvers.hpp
sparse/: CSCMatrix.cpp  CSCMatrix.hpp
